--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,8 @@
-<p class="pull-right">
-  <%= link_to '[edit this post]', edit_post_path(@post) %>
-</p>
+<% if logged_in? %>
+  <p class="pull-right">
+    <%= link_to '[edit this post]', edit_post_path(@post) %>
+  </p>
+<% end %>
 
 <p>
   <%= render @post.categories %>
@@ -14,26 +16,19 @@
   <hr/>
 </p>
 
-<%= form_for [@post, @comment] do |f| %>
-  <%= render 'shared/errors', model: @comment %>
-  <div class="control-group">
-    <%= f.label :body, "Leave a comment" %>
-    <%= f.text_area :body, rows: 3, class: 'span4' %>
-  </div>
-  <%= f.submit class: "btn btn-primary" %>
+<% if logged_in? %>
+  <%= form_for [@post, @comment] do |f| %>
+    <%= render 'shared/errors', model: @comment %>
+    <div class="control-group">
+      <%= f.label :body, "Leave a comment" %>
+      <%= f.text_area :body, rows: 3, class: 'span4' %>
+    </div>
+    <%= f.submit class: "btn btn-primary" %>
+  <% end %>
 <% end %>
 
 <h5>Comments</h5>
-<div class="clearfix">
-  <% @post.comments.each do |comment| %>
-    <div class="well span8">
-      <em>"<%= comment.body %>"</em>
-      <br/>
-      <span class='quiet'>by</span> <%= link_to comment.creator.username, '' %>
-      <small>on <%= format_date(comment.created_at) %></small>
-    </div>
-  <% end %>
-</div>
+<%= render 'shared/comments', source: @post, show_post_title: false %>
 
 
 
