--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,7 +28,7 @@
 <% end %>
 
 <h5>Comments</h5>
-<%= render 'shared/comments', source: @post, show_post_title: false %>
+<%= render 'shared/comments', source: @post.reload, show_post_title: false %>
 
 
 
