--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -3,15 +3,15 @@
     <div class="row">
       <div class="span0 well text-center">
         <% if logged_in? %>
-          <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: 'post'  do %>
+          <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: 'post', remote: true  do %>
             <i class="icon-arrow-up"></i>
           <% end %>
           <br/>
         <% end %>
-        <%= pluralize(comment.total_votes, "vote") %>
+        <span id="data_comment<%= comment.id %>_votes"><%= pluralize(comment.total_votes, "vote") %></span>
         <br/>
         <% if logged_in? %>
-          <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: 'post'  do %>
+          <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: 'post', remote: true  do %>
             <i class="icon-arrow-down"></i>
           <% end %>
         <% end %>
