--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,12 @@
 <%= render 'shared/content_title', title: "Profile: #{@user.username}" %>
 
 <div class="well">
+  <dl class="dl-horizontal">
+    <dt>Username:</dt>
+    <dd><%= @user.username %></dd>
+    <dt>Time Zone:</dt>
+    <dd><%= @user.time_zone || Time.zone.name %></dd>
+  </dl>
 </div>
   
 <h5><%= "#{@user.username}'s Activity" %></h5>
